logo iunit subido

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- </div> -->
       </div>
       <div class='subnav'>
-        <a class='brand' href='index.html'><img class='logo' src='/img/iunity-logo.png' alt='logo IUNIT' />CENTRO DE
+        <a class='brand' href='index.html'><img class='logo' src='https://s7.gifyu.com/images/iunity-logo-01e9c5a15f866ae96a.png' alt='logo IUNIT' />CENTRO DE
           EDUCACIÓN SUPERIOR DE NEGOCIOS, INNOVACIÓN Y TECNOLOGÍA
         </a>
         <ul class='nav-list'>
@@ -67,7 +67,7 @@
         A fake / hidden checkbox is used as click reciever
         -->
         <input type="checkbox" />
-        <img class='logo-hamburger'src='/img/iunity-logo.png'/>
+        <img class='logo-hamburger'src='https://s7.gifyu.com/images/iunity-logo-01e9c5a15f866ae96a.png'/>
 
         <!--
         Some spans to act as a hamburger.
@@ -224,7 +224,7 @@
       <div class='left-block'>
         <!-- logo -->
         <span class='footer-brand'>
-          <img src="/img/iunity-logo.png" alt="logo IUNIT" />
+          <img src="https://s7.gifyu.com/images/iunity-logo-01e9c5a15f866ae96a.png" alt="logo IUNIT" />
           <p>CENTRO DE EDUCACIÓN SUPERIOR DE NEGOCIOS, INNOVACIÓN Y TECNOLOGÍA</p>
         </span>
         <!-- Social buttons -->
