leer mas funcionando en firefox, en chrome no

--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
           <p>
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
           </p>
-          <a href="/" target="_blank">
-            LEER MÁS
-            <img src='/img/chevron_right-black-18dp.svg' alt='navigation arrow right' />
+          <a class='mas' href="/" target="_blank">
+            <p>LEER MÁS</p>  
+            <span><i class="fas fa-chevron-right"></i></span>
           </a>
         </div>
       </div>
@@ -155,9 +155,9 @@
           <p>
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
           </p>
-          <a href="/" target="_blank">
-            LEER MÁS
-            <img src='/img/chevron_right-black-18dp.svg' alt='navigation arrow right' />
+          <a class='mas' href="/" target="_blank">
+            <p>LEER MÁS</p>
+            <i class="fas fa-chevron-right"></i>
           </a>
         </div>
         <img class='modalidad' src='https://s7.gifyu.com/images/modalidad-iunity-01-01.png'
@@ -172,9 +172,9 @@
           <p>
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
           </p>
-          <a href="/" target="_blank">
-            LEER MÁS
-            <img src='/img/chevron_right-black-18dp.svg' alt='navigation arrow right' />
+          <a class='mas' href="/" target="_blank">
+            <p>LEER MÁS</p>
+            <i class="fas fa-chevron-right"></i>
           </a>
         </div>
       </div>
@@ -186,9 +186,9 @@
           <p>
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
           </p>
-          <a href="/" target="_blank">
-            LEER MÁS
-            <img src='/img/chevron_right-black-18dp.svg' alt='navigation arrow right' />
+          <a class='mas' href="/" target="_blank">
+            <p>LEER MÁS</p>
+            <i class="fas fa-chevron-right"></i>
           </a>
         </div>
         <img class='precio' src='https://s7.gifyu.com/images/pricing-iunity-01.png' alt='icono precio curso' />
@@ -203,9 +203,9 @@
           <p>
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
           </p>
-          <a href="/" target="_blank">
-            LEER MÁS
-            <img src='/img/chevron_right-black-18dp.svg' alt='navigation arrow right' />
+          <a class='mas' href="/" target="_blank">
+            <p>LEER MÁS</p>
+            <i class="fas fa-chevron-right"></i>
           </a>
         </div>
         
