--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="/img/iunity-logo.png" type="image/favicon-icon">
+  <link rel="icon" href="https://s7.gifyu.com/images/iunity-logo-01e9c5a15f866ae96a.png" type="image/favicon-icon">
 
 </head>
 
