--- a/index.html
+++ b/index.html
@@ -57,39 +57,25 @@
         </ul>
       </div>
     </nav>
+    <!--Navbar hamburger to display on mobile devices-->
     <nav class="hambuger">
-      <!--
-        Made by Erik Terwan, https://codepen.io/erikterwan/pen/EVzeRP?editors=1000
-        Normally I would use Bootstrap
-        -->
-      <div id="menuToggle">
-        <!--
-        A fake / hidden checkbox is used as click reciever
-        -->
-        <input type="checkbox" />
-        <img class='logo-hamburger'src='https://s7.gifyu.com/images/iunity-logo-01e9c5a15f866ae96a.png'/>
-
-        <!--
-        Some spans to act as a hamburger.
-        -->
-        <span></span>
-        <span></span>
-        <span></span>
-
-        <!--
-        Too bad the menu has to be inside of the button
-        but hey, it's pure CSS magic.
-        -->
-        <ul id="menu">
-          <a><li>PROGRAMAS</li></a>
-          <a><li>POR QUÉ NOSOTROS</li></a>
-          <a><li>ADMISIÓN</li></a>
-          <a><li>IUNIT</li></a>
-          <a><li>QUIÉNES SOMOS</li></a>
-          <a><li>CONTACTO</li></a>
-          <a><li>CAMPUS VIRTUAL</li></a>
-        </ul>
-      </div>
+        <!-- Top Navigation Menu -->
+        <div class="topnav">
+          <a href="#home" class="active"><img class='logo' src='https://s7.gifyu.com/images/iunity-logo-01e9c5a15f866ae96a.png' alt='iunit logo'/></a>
+          <!-- Navigation links (hidden by default) -->
+          <div id="myLinks">
+            <a href="#programas">PROGRAMAS</a>
+            <a href="#nosotros">POR QUÉ NOSOTROS</a>
+            <a href="#admision">ADMISIÓN</a>
+            <a href="#iunit">IUNIT</a>
+            <a href="#contacto">CONTACTO</a>
+            <a href="#campus">CAMPUS VIRTUAL</a>
+          </div>
+          <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
+        </div>
     </nav>
   </header>
   <!-- Sections: core, text, program, content -->
@@ -281,6 +267,7 @@
     </section>
 
   </footer>
+  <script src="/script.js"></script>
 </body>
 
 </html>
