footer cellphone arranged

--- a/index.html
+++ b/index.html
@@ -207,12 +207,15 @@
   <!-- FOOTER -->
   <footer class="page-footer">
     <section class='footer'>
+      <div class='container-footer2'><img class='logo-footer2' src='https://s7.gifyu.com/images/logo-footer-01.png' alt='logo IUNIT'/></div>
       <div class='left-block'>
         <!-- logo -->
+        
         <span class='footer-brand'>
-          <img src="https://s7.gifyu.com/images/iunity-logo-01e9c5a15f866ae96a.png" alt="logo IUNIT" />
+          <img class='logo-footer' src="https://s7.gifyu.com/images/iunity-logo-01e9c5a15f866ae96a.png" alt="logo IUNIT" />
           <p>CENTRO DE EDUCACIÓN SUPERIOR DE NEGOCIOS, INNOVACIÓN Y TECNOLOGÍA</p>
         </span>
+        
         <!-- Social buttons -->
         <div class='social'>
           <ul class="icon-list">
