more adjustments footer

--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
 
       </div>
       <div class='right-block'>
+        <p>Centro universitario adscrito a:</p>
         <img class='logo-reyjc' src="https://s7.gifyu.com/images/logoURJC-iunity-01.png"
           alt="logo universidad rey Juan Carlos">
       </div>
