adjustments mobile devices

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
     </nav>
     <!--Navbar hamburger to display on mobile devices-->
-    <nav class="hambuger">
+    <nav class="hamburger">
         <!-- Top Navigation Menu -->
         <div class="topnav">
           <a href="#home" class="active"><img class='logo' src='https://s7.gifyu.com/images/iunity-logo-01e9c5a15f866ae96a.png' alt='iunit logo'/></a>
