--- a/index.html
+++ b/index.html
@@ -237,10 +237,13 @@
             </li>
           </ul>
         </div>
+        <div className='centro-inter'>
+          <p>Centro Internacional Universitario de Negocios, Innovación y Tecnología</p>
+        </div>
         <!-- Dirección-->
         <div class="address">
           <p>Calle Alfonso Rodríguez Santamaría 19. Madrid, España.</p>
-          <p>info@iunit.edu.es | (+34) 910 604 413</p>
+          <p>info@iunit.edu.es | (+34) 914 419 242 | (+34) 910 604 413</p>
         </div>
 
       </div>
