--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
             </li>
           </ul>
         </div>
-        <div className='centro-inter'>
-          <p>Centro Internacional Universitario de Negocios, Innovación y Tecnología</p>
+        <div>
+          <p  className='centro-inter'>Centro Internacional Universitario de Negocios, Innovación y Tecnología</p>
         </div>
         <!-- Dirección-->
         <div class="address">
